--- a/resources/assets/stylesheets/sass/blocks/history-last/history-last.sass
+++ b/resources/assets/stylesheets/sass/blocks/history-last/history-last.sass
@@ -14,8 +14,6 @@
 
 .history-last > .slick-slider
   width: 795px
-  //width: 355px
-
 
   +media-1152
     width: 700px
@@ -94,6 +92,13 @@
     justify-content: center
 
 .history-left > .history-one
+
+  +media-1211
+    width: 370px
+
+  +media-1152
+    width: 340px
+
   +media-1000
     width: 32vw
 
