--- a/resources/views/pages/index.njk
+++ b/resources/views/pages/index.njk
@@ -22,7 +22,7 @@
         <div class="history-last">
             <img class="bacon" src="/assets/images/bacon.png">
             <img class="basilick" src="/assets/images/basil-small.png">
-            <h2 data-aos="fade-left" class="history-last__titile" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="600">Последние истории</h2>
+            <h2 data-aos="fade-right" class="history-last__titile" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="600">Последние истории</h2>
 	        <div class="history-last-slider slider ">
 		        <div class="history-slider slick-slide ">
 			        <div class="history-people">
@@ -80,38 +80,6 @@
 				        </div>
 			        </div>
 		        </div>
-		        {#
-		        <div class="history-slider slick-slide ">
-			        <div class="history-people">
-				        <div class="history-right">
-					        <div class="history-one">
-						        <img class="history__logo logo-four" src="/assets/images/anna.png" alt="Анна">
-						        <div class="history-feed">
-							        <h5 class="logo-title">Анна Кирилова</h5>
-							        <p class="feed">Это блюдо из мяса и овощей на<br> гриле, которое готовят прямо на<br> глазах. Его могут ещё подавать в<br><span class="full__fid">пите круглой или овальной форм...<br> Это самое вкусное сочетание,<br> особенно, для проголодавшегося<br> туриста, путешествующего по Греции</span></p>
-							        <a href="" class="whatch__full">Читать полностью</a>
-						        </div>
-					        </div>
-					        <div class="history-one">
-						        <img class="history__logo logo-five" src="/assets/images/oleg.png" alt="Олег">
-						        <div class="history-feed">
-							        <h5 class="logo-title">Олег Бондаренко</h5>
-							        <p class="feed">Поговорим о бел пури, вкусном<br> индийском блюде из воздушного риса,<br> жареной вермишели, овощей и соусом <span class="full__fid">из острого тамаринда... Лучше всего <br>попробовать блюдо в Мумбаи.</span></p>
-							        <a href="" class="whatch__full">Читать полностью</a>
-						        </div>
-					        </div>
-					        <div class="history-one">
-						        <img class="history__logo logo-six" src="/assets/images/natasha.png" alt="Наташа">
-						        <div class="history-feed">
-							        <h5 class="logo-title">Наташа Кирова</h5>
-							        <p class="feed">Поговорим о бел пури, вкусном<br> индийском блюде из воздушного риса,<br> жареной вермишели, овощей и соусом <span class="full__fid">из острого тамаринда... Лучше всего <br>попробовать блюдо в Мумбаи.</span></p>
-							        <a href="#" class="whatch__full">Читать полностью</a>
-						        </div>
-					        </div>
-				        </div>
-			        </div>
-		        </div>
-		        #}
 		        <div class="history-slider slick-slide ">
 			        <div class="history-people">
 				        <div class="history-left">
@@ -168,38 +136,6 @@
 				        </div>
 			        </div>
 		        </div>
-		        {#
-		        <div class="history-slider slick-slide ">
-			        <div class="history-people">
-				        <div class="history-right">
-					        <div class="history-one">
-						        <img class="history__logo logo-four" src="/assets/images/anna.png" alt="Анна">
-						        <div class="history-feed">
-							        <h5 class="logo-title">Анна Кирилова</h5>
-							        <p class="feed">Это блюдо из мяса и овощей на<br> гриле, которое готовят прямо на<br> глазах. Его могут ещё подавать в<br><span class="full__fid">пите круглой или овальной форм...<br> Это самое вкусное сочетание,<br> особенно, для проголодавшегося<br> туриста, путешествующего по Греции</span></p>
-							        <a href="" class="whatch__full">Читать полностью</a>
-						        </div>
-					        </div>
-					        <div class="history-one">
-						        <img class="history__logo logo-five" src="/assets/images/oleg.png" alt="Олег">
-						        <div class="history-feed">
-							        <h5 class="logo-title">Олег Бондаренко</h5>
-							        <p class="feed">Поговорим о бел пури, вкусном<br> индийском блюде из воздушного риса,<br> жареной вермишели, овощей и соусом <span class="full__fid">из острого тамаринда... Лучше всего <br>попробовать блюдо в Мумбаи.</span></p>
-							        <a href="" class="whatch__full">Читать полностью</a>
-						        </div>
-					        </div>
-					        <div class="history-one">
-						        <img class="history__logo logo-six" src="/assets/images/natasha.png" alt="Наташа">
-						        <div class="history-feed">
-							        <h5 class="logo-title">Наташа Кирова</h5>
-							        <p class="feed">Поговорим о бел пури, вкусном<br> индийском блюде из воздушного риса,<br> жареной вермишели, овощей и соусом <span class="full__fid">из острого тамаринда... Лучше всего <br>попробовать блюдо в Мумбаи.</span></p>
-							        <a href="" class="whatch__full">Читать полностью</a>
-						        </div>
-					        </div>
-				        </div>
-			        </div>
-		        </div>
-		        #}
 		        <div class="history-slider slick-slide ">
 			        <div class="history-people">
 				        <div class="history-left">
@@ -256,37 +192,6 @@
 				        </div>
 			        </div>
 		        </div>
-		        {#
-		        <div class="history-slider slick-slide ">
-			        <div class="history-people">
-				        <div class="history-right">
-					        <div class="history-one">
-						        <img class="history__logo logo-four" src="/assets/images/anna.png" alt="Анна">
-						        <div class="history-feed">
-							        <h5 class="logo-title">Анна Кирилова</h5>
-							        <p class="feed">Это блюдо из мяса и овощей на<br> гриле, которое готовят прямо на<br> глазах. Его могут ещё подавать в<br><span class="full__fid">пите круглой или овальной форм...<br> Это самое вкусное сочетание,<br> особенно, для проголодавшегося<br> туриста, путешествующего по Греции</span></p>
-							        <a href="" class="whatch__full">Читать полностью</a>
-						        </div>
-					        </div>
-					        <div class="history-one">
-						        <img class="history__logo logo-five" src="/assets/images/oleg.png" alt="Олег">
-						        <div class="history-feed">
-							        <h5 class="logo-title">Олег Бондаренко</h5>
-							        <p class="feed">Поговорим о бел пури, вкусном<br> индийском блюде из воздушного риса,<br> жареной вермишели, овощей и соусом <span class="full__fid">из острого тамаринда... Лучше всего <br>попробовать блюдо в Мумбаи.</span></p>
-							        <a href="" class="whatch__full">Читать полностью</a>
-						        </div>
-					        </div>
-					        <div class="history-one">
-						        <img class="history__logo logo-six" src="/assets/images/natasha.png" alt="Наташа">
-						        <div class="history-feed">
-							        <h5 class="logo-title">Наташа Кирова</h5>
-							        <p class="feed">Поговорим о бел пури, вкусном<br> индийском блюде из воздушного риса,<br> жареной вермишели, овощей и соусом <span class="full__fid">из острого тамаринда... Лучше всего <br>попробовать блюдо в Мумбаи.</span></p>
-							        <a href="#" class="whatch__full">Читать полностью</a>
-						        </div>
-					        </div>
-				        </div>
-			        </div>
-		        </div>#}
             </div>
         </div>
     </div>
@@ -301,7 +206,7 @@
     <div class="container">
         <div class="victory-concurs">
 
-            <span data-aos="fade-left" class="victory__title">Победитель конкурса</span>
+            <span data-aos="fade-right" class="victory__title">Победитель конкурса</span>
             <span class="victory__text">Будет объявлен 20 ноября 2017 года</span>
 
             <span class="victory__last__day">До  конца  конкурса  осталось:</span>
