--- a/resources/views/shared/_header.njk
+++ b/resources/views/shared/_header.njk
@@ -6,7 +6,7 @@
 	    {% include "shared/_nav-header-mobile.njk" %}
         <div class="remember">
             <div class="remember-right">
-                <h1 data-aos="fade-left" class="remember__title ">Вспомни лучшее</h1>
+                <h1 data-aos="fade-right" class="remember__title">Вспомни лучшее</h1>
                 <div class="remember-text">
                     <span class="remember__sub" >вместе с Piu Del Cibo</span>
                     <p class="remember__text remember__text_hide">Расскажи историю о лучшей еде в твоей жизни и выиграй<br>
