--- a/resources/assets/stylesheets/sass/blocks/header/header.sass
+++ b/resources/assets/stylesheets/sass/blocks/header/header.sass
@@ -80,6 +80,9 @@
   +media-955
     padding-right: 20px
 
+  +media-768
+    padding-right: 10px
+
   +media-685
     float: none
     padding-right: 0
