--- a/resources/assets/stylesheets/sass/blocks/simple-btn/simpe-btn.sass
+++ b/resources/assets/stylesheets/sass/blocks/simple-btn/simpe-btn.sass
@@ -35,6 +35,9 @@
   +media-860
     width: 25vw
 
+  +media-768
+    width: 28vw
+
   +media-685
     width: 35vw
 
@@ -50,3 +53,6 @@
 
   +media-356
     font-size: 14px
+
+  +media-320
+    width:  58vw
