add deploy settings

--- a/resources/views/layouts/layout.njk
+++ b/resources/views/layouts/layout.njk
@@ -5,13 +5,13 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Project</title>
+    <title>Piu Del Cibo</title>
 
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="keywords" content="Piu Del Cibo">
+    <meta name="description" content="Piu Del Cibo">
 
-    <link rel="shortcut icon" href="${require('/assets/images/favicon/favicon.ico')}" type="image/x-icon">
-    <link rel="apple-touch-icon" href="${require('/assets/images/favicon/apple-touch-icon.png')}" type="image/png">
+    <!--link rel="shortcut icon" href="${require('/assets/images/favicon/favicon.ico')}" type="image/x-icon">
+    <link rel="apple-touch-icon" href="${require('/assets/images/favicon/apple-touch-icon.png')}" type="image/png"-->
 
 
     <link rel="stylesheet" href="css/app.css?{{ hash }}">
