add js ad html history add

--- a/resources/assets/stylesheets/sass/blocks/history-last/history-last.sass
+++ b/resources/assets/stylesheets/sass/blocks/history-last/history-last.sass
@@ -3,6 +3,9 @@
   position: relative
   float: right
 
+  &_disable
+    display: none
+
   +media-992
     float: none
 
@@ -25,49 +28,7 @@
     width: 100%
 
 
-.bacon
-  position: absolute
-  left: 13%
 
-  +media-1152
-    left: 5%
-
-  +media-992
-    left: 20%
-
-  +media-900
-    left: 16%
-
-  +media-800
-    left: 12%
-
-  +media-720
-    width: 75px
-    top: 5%
-
-  +media-576
-    display: none
-
-
-.basilick
-  position: absolute
-  top: -3%
-  right: 10%
-
-  +media-992
-    right: 23%
-
-  +media-900
-    right: 20%
-
-  +media-800
-    right: 16%
-
-  +media-685
-    right: 10%
-
-  +media-576
-    display: none
 
 .history-people
   position: relative
