--- a/resources/assets/stylesheets/sass/blocks/simple-btn/simpe-btn.sass
+++ b/resources/assets/stylesheets/sass/blocks/simple-btn/simpe-btn.sass
@@ -12,6 +12,13 @@
   -moz-box-shadow:    0px 4px 20px 0px rgba(50, 50, 50, 0.5)
   box-shadow:         0px 4px 20px 0px rgba(50, 50, 50, 0.5)
 
+  &_success
+    background: #a3cd3c
+    border-color: #a3cd3c
+    text-align: center
+    color: #fff
+    margin-top: 15px
+
   &:hover
     text-decoration: none
     color: #000
@@ -56,3 +63,20 @@
 
   +media-320
     width:  58vw
+
+
+  &_vk
+    color: #fff
+    background: #4795d8
+    border-color: #4795d8
+    margin-bottom: 15px
+
+  &_faceboock
+    color: #fff
+    background: #0054a6
+    border-color: #0054a6
+
+  &_disable
+    display: none
+    
+    
