--- a/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
+++ b/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
@@ -6,6 +6,9 @@ a:hover, a:focus
   color: inherit
   text-decoration: none
 
+.history
+  position: relative
+
 .history-create
   position: relative
   background: url("../../images/bg-green.png") no-repeat
@@ -91,7 +94,7 @@ a:hover, a:focus
 .history-content
   border: 5px dotted #d6d6d6
   border-radius: 10px
-  padding: 40px 40px 80px
+  padding: 40px 40px 40px
 
   +media-1225
     padding-left: 20px
@@ -165,9 +168,15 @@ a:hover, a:focus
     font-size: 9vw
     padding-top: 5px
 
+
+  &__authorization
+    display: none
+
+.history__social
+  padding-right: 15px
+
 .history__text_white
   color: #fff
-
 
 .history__text
   display: block
@@ -212,3 +221,46 @@ a:hover, a:focus
 
 
 
+.bacon
+  position: absolute
+  left: 42%
+  bottom: -145px
+
+  +media-1152
+    left: 5%
+
+  +media-992
+    left: 20%
+
+  +media-900
+    left: 16%
+
+  +media-800
+    left: 12%
+
+  +media-720
+    width: 75px
+    top: 5%
+
+  +media-576
+    display: none
+
+
+.basilick
+  position: absolute
+  right: 10%
+
+  +media-992
+    right: 23%
+
+  +media-900
+    right: 20%
+
+  +media-800
+    right: 16%
+
+  +media-685
+    right: 10%
+
+  +media-576
+    display: none
