--- a/resources/views/pages/index.njk
+++ b/resources/views/pages/index.njk
@@ -11,17 +11,31 @@
             <img class="create__pepper" src="/assets/images/pepper.png">
             <img class="create__basil" src="/assets/images/basil.png">
             <div class="history-content">
-                <h2 class="history__title history__text_white">Добавить свою<br>историю</h2>
+                <h2 class="history__title history__title__user history__text_white ">Добавить свою<br>историю</h2>
+	            <h2 class="history__title history__title__authorization history__text_white">Авторизируйся</h2>
                 <p class="history__text history__text_white">чтобы получить возможность<br> выиграть блюдо из твоих<br>воспоминаний</p>
                 <a class="simple__btn history__send history__send_white" href="#">Написать историю</a>
+	            <a href="#" class="simple__btn simple__btn_vk simple__btn_disable"><img src="/assets/images/vk-white.png" class="history__social vk">Вконтакте</a>
+	            <a href="#" class="simple__btn simple__btn_faceboock simple__btn_disable"><img src="/assets/images/faceboock-white.png" class="history__social faceboock">Faceboock</a>
                 <p class="history__text history__text_white history__text_top">Как мы будем определять<br> победителся конкурса?</p>
                 <a class="simple__btn history__chois history__text_white" href="#">Протокол выбора</a>
             </div>
         </div>
+	    <img class="bacon" src="/assets/images/bacon.png">
+	    <img class="basilick" src="/assets/images/basil-small.png">
+
+
+	    <div class="add-history add-history_disable">
+		    <h2 class="history__title history__title__add">Ваша история</h2>
+		    <p class="history__text__add">Расскажи о лучшем блюде в вашей<br>жизни и отправьие историю нам</p>
+		    <textarea name="text" class="history__add__text" cols="80" rows="17" maxlength="1000"
+		    ></textarea>
+		    <span class="text-count"></span>
+		    <a href="#" class="simple__btn simple__btn_success">Отправить</a>
+	    </div>
+
 
         <div class="history-last">
-            <img class="bacon" src="/assets/images/bacon.png">
-            <img class="basilick" src="/assets/images/basil-small.png">
             <h2 data-aos="fade-right" class="history-last__titile" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="600">Последние истории</h2>
 	        <div class="history-last-slider slider ">
 		        <div class="history-slider slick-slide ">
