--- a/resources/assets/stylesheets/sass/blocks/index.sass
+++ b/resources/assets/stylesheets/sass/blocks/index.sass
@@ -7,5 +7,6 @@
 @import "social/social"
 @import "history-last/history-last"
 @import "nav-header-mobile/nav-header-mobile"
+@import "add-history/add-history"
 
 
