js load content

--- a/resources/assets/stylesheets/sass/blocks/index.sass
+++ b/resources/assets/stylesheets/sass/blocks/index.sass
@@ -8,5 +8,6 @@
 @import "history-last/history-last"
 @import "nav-header-mobile/nav-header-mobile"
 @import "add-history/add-history"
+@import "full-history/full-history"
 
 
