--- a/resources/views/pages/index.njk
+++ b/resources/views/pages/index.njk
@@ -34,6 +34,17 @@
 		    <a href="#" class="simple__btn simple__btn_success">Отправить</a>
 	    </div>
 
+	    <div class="full-history full-history_disable">
+		    <h2 class="history__title">История</h2>
+		    <div class="full-history-content">
+			    <img class="history__logo logo-first" src="">
+			    <div class="history-feed">
+				    <h5 id="logo-title" class="logo-title"></h5>
+				    <p id="feed" class="feed"></p>
+				    <a href="#" class="whatch__full"><img src="/assets/images/left-arrow-green.png" alt="">Вернуться ко всес историям</a>
+			    </div>
+		    </div>
+	    </div>
 
         <div class="history-last">
             <h2 data-aos="fade-right" class="history-last__titile" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="600">Последние истории</h2>
