правки по header

--- a/resources/assets/stylesheets/sass/blocks/add-history/add-history.sass
+++ b/resources/assets/stylesheets/sass/blocks/add-history/add-history.sass
@@ -9,7 +9,15 @@
   &_active
     display: block
 
+  +media-1280
+    width: 790px
 
+  +media-1152
+    width: 735px
+
+  +media-1050
+    width: 700px
+    padding-bottom: 50px
 
 .history__title__add
   text-align: center
@@ -21,6 +29,8 @@
   text-align: center
 
 .history__add__text
+  width: 780px
+  height: 335px
   resize: none
   outline: none
   border: 2px solid #d0d0d0
@@ -30,6 +40,12 @@
   color: #919191
   padding-left: 20px
   padding-top: 15px
+
+  +media-1280
+    width: 700px
+
+  +media-1152
+    width: 680px
 
 //&:focus
   //border-color: #ccc
