--- a/resources/assets/stylesheets/sass/blocks/header/header.sass
+++ b/resources/assets/stylesheets/sass/blocks/header/header.sass
@@ -3,6 +3,7 @@
   position: relative
   background: url('../../images/bg-header.png') no-repeat
   background-size: cover
+  background-position-x: -50px
 
   +media-1500
     background-position-x: -75px
@@ -56,8 +57,10 @@
 .remember-text::before
   content: ''
   position: absolute
+  left: -15px
   width: 55px
   height: 90px
+  margin-top: 15px
   background: url("../../images/arrow-small.png") no-repeat
 
   +media-1280
@@ -70,6 +73,7 @@
 .remember-right
   float: right
   margin-top: 100px
+  //padding-right: 65px
 
   +media-1280
     padding-right: 100px
@@ -96,6 +100,8 @@
 .remember__title
   font-family: drina
   font-size: 120px
+  letter-spacing: 2px
+  margin-bottom: 0
 
   //+animate-eff
 
@@ -133,6 +139,7 @@
 
 .remember-text
   position: relative
+  margin-top: -25px
 
   +media-685
     width: 340px
@@ -148,7 +155,7 @@
   font-family: drina
   font-size: 48px
   color: #9ecb32
-  margin-left: 40px
+  margin-left: 33px
 
   +media-1600
     font-size: 42px
@@ -180,7 +187,7 @@
 .remember__text
   font-family: gothamPM
   font-size: 18px
-  margin-left: 70px
+  margin-left: 65px
   color: #6c6c6c
   line-height: 27px
 
@@ -215,26 +222,27 @@
   +media-320
     margin-bottom: 0
 
-.remember__text_new
-  display: none
-
-  +media-860
-    display: block
-
-.remember__text_bold
-  font-family: gothamPBo
-  color: #000
-
-.remember__text_hide
-
-  +media-860
+  &_new
     display: none
+
+    +media-860
+      display: block
+
+  &_bold
+    font-family: gothamPBo
+    color: #000
+    margin-left: 0
+
+  &_hide
+    +media-860
+      display: none
 
 .remember-step
   display: flex
   flex-direction: row
-  justify-content: space-around
+  justify-content: center
   padding-top: 50px
+  padding-right: 13px
 
   +media-860
     position: absolute
@@ -251,8 +259,9 @@
     flex-direction: column
 
 .step
-  margin: 0 auto
   z-index: 1
+  margin-right: 45px
+  margin-left: 45px
   text-align: center
 
   +media-860
@@ -340,8 +349,12 @@
   +media-320
     font-size: 4.8vw
 
+.step-one
+  margin-left: 30px
+  margin-right: 30px
+
 .step-third
-  margin-left: 40px
+  //margin-left: 40px
 
   +media-1152
     margin-left: 10px
@@ -363,8 +376,8 @@
 
 .arrow-long
   position: absolute
-  right: 8%
-  bottom: 19%
+  right: 12%
+  bottom: 23%
   width: 50vw
 
   +media-1600
@@ -413,8 +426,8 @@
 /*AUTSIDE SHEETS*/
 .sheet
   position: absolute
-  width: 100px
-  height: 100px
+  width: 95px
+  height: 95px
 
   +media-860
     position: absolute
@@ -431,8 +444,9 @@
     height: 50px
 
   &__one
-    left: 9%
-    top: 65%
+    height: 60px
+    left: 5%
+    top: 61%
 
     +media-768
       left: 10%
@@ -446,8 +460,8 @@
       top: 13%
 
   &__second
-    left: 13%
-    top: 81%
+    left: 10%
+    top: 80%
 
     +media-768
       top: 85%
@@ -456,8 +470,8 @@
       top: 80%
 
   &__third
-    top: 20%
-    right: 10%
+    top: 25%
+    right: 13%
 
     +media-1152
       right: 5%
@@ -475,8 +489,8 @@
       top: 45%
 
   &__four
-    top: 83%
-    right: 8%
+    top: 85%
+    right: 7%
 
     +media-1600
       top: 86%
