исправления блока история

--- a/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
+++ b/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
@@ -8,15 +8,16 @@ a:hover, a:focus
 
 .history
   position: relative
+  padding-top: 35px
 
 .history-create
   position: relative
   background: url("../../images/bg-green.png") no-repeat
-  background-size: contain
+  //background-size: contain
   float: left
   text-align: center
-  width: 400px
-  padding: 30px 30px 100px
+  width: 425px
+  padding: 45px 30px 100px
 
   +media-1225
     width: 33vw
@@ -70,7 +71,7 @@ a:hover, a:focus
 .create__basil
   position: absolute
   left: -4%
-  bottom: 34%
+  bottom: 39%
 
   +media-1024
     left: -2%
@@ -94,7 +95,7 @@ a:hover, a:focus
 .history-content
   border: 5px dotted #d6d6d6
   border-radius: 10px
-  padding: 40px 40px 40px
+  padding: 40px 40px 65px
 
   +media-1225
     padding-left: 20px
@@ -138,7 +139,8 @@ a:hover, a:focus
 .history__title
   font-family: drina
   font-size: 50px
-  padding-top: 25px
+  margin-top: 0
+  padding-top: 20px
 
   +media-1225
     font-size: 36px
@@ -233,8 +235,8 @@ a:hover, a:focus
 
 .bacon
   position: absolute
-  left: 42%
-  bottom: -145px
+  left: 43%
+  bottom: -105px
 
   +media-1152
     left: 40%
@@ -263,7 +265,10 @@ a:hover, a:focus
 
 .basilick
   position: absolute
-  right: 10%
+  right: 11%
+  top: 75%
+  width: 60px
+
 
   +media-992
     right: 23%
