--- a/resources/views/pages/index.njk
+++ b/resources/views/pages/index.njk
@@ -183,7 +183,7 @@
 			}
         ] %}
         <div class="history-last">
-            <h2 data-aos="fade-right" class="history-last__titile js-history-title-all" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="600">Последние истории</h2>
+            <h2 data-aos="fade-right" class="history-last__titile js-history-title-all" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="600">Последние Истории</h2>
             <h2 class="history-last__titile js-history-title" style="display: none">История</h2>
             {% for history in histories %}
 				<div id="{{ history.id }}" class="full-history full-history_disable">
