--- a/resources/views/shared/_nav-header.njk
+++ b/resources/views/shared/_nav-header.njk
@@ -1,7 +1,7 @@
 <div class="menu">
 	<ul class="menu-content">
 		<li class="menu-content__item"><a class="menu-content__link" href="#">Главная</a></li>
-		<li class="menu-content__item"><a class="menu-content__link" href="#">Ваша история</a></li>
+		<li class="menu-content__item"><a class="menu-content__link" href="#">Ваши истории</a></li>
 		<li class="menu-content__item menu-content__logo"><a href="#"><img class="logo" src="/assets/images/nav-header.png" alt="logo"></a></li>
 		<li class="menu-content__item"><a class="menu-content__link" href="#">Результаты</a></li>
 		<li class="menu-content__item"><a class="menu-content__link" href="#">Готовим с эмоцией</a></li>
