--- a/resources/assets/stylesheets/sass/blocks/history-last/history-last.sass
+++ b/resources/assets/stylesheets/sass/blocks/history-last/history-last.sass
@@ -2,6 +2,7 @@
 .history-last
   position: relative
   float: right
+  padding-bottom: 65px
 
   &_disable
     display: none
@@ -14,9 +15,12 @@
     font-family: drina
     font-size: 55px
     color: #444
+    padding-right: 35px
+    margin-top: 0px
 
 .history-last > .slick-slider
-  width: 795px
+  width: 760px
+  //798
 
   +media-1152
     width: 700px
@@ -28,7 +32,8 @@
     width: 100%
 
 
-
+.slick-track > .slick-slide
+  width: 770px
 
 .history-people
   position: relative
@@ -45,7 +50,8 @@
 
 .history-left
   float: left
-  
+  width: 375px
+
   +media-576
     float: none
     display: flex
@@ -91,7 +97,7 @@
 .history-one
   width: 385px
   min-height: 125px
-  margin-bottom: 25px
+  margin-bottom: 65px
 
   +media-1152
     width: 340px
@@ -110,7 +116,7 @@
 
 .history-feed
   float: left
-  padding-left: 20px
+  padding-left: 15px
 
   +media-1152
     padding-left: 10px
@@ -126,6 +132,7 @@
   font-size: 16px
   color: #444
   padding-bottom: 10px
+  margin-top: 0
 
 .feed
   font-family: gothamPL
@@ -178,7 +185,7 @@
     display: block
 
 .history-right
-  float: right
+  float: left
 
   +media-1225
     margin-right: 20px
