--- a/resources/assets/stylesheets/sass/blocks/footer/footer.sass
+++ b/resources/assets/stylesheets/sass/blocks/footer/footer.sass
@@ -6,6 +6,7 @@ footer
   position: relative
   text-align: center
   padding-top: 50px
+  padding-bottom: 50px
 
   +media-768
     padding-left: 25px
@@ -19,7 +20,7 @@ footer
     width: 50px
 
 .basil-first
-  top: 22%
+  top: 28%
   right: 10%
 
   +media-1024
@@ -29,7 +30,7 @@ footer
     top: 30%
 
 .basil-second
-  top: 60%
+  top: 55%
   left: 16%
 
   +media-860
@@ -60,7 +61,7 @@ footer
   height: 65px
   width: 65px
   z-index: 9999
-  top: 40%
+  top: 33%
 
   &:hover
     background: url("../../images/slide-arrow-left.png") no-repeat
@@ -118,8 +119,8 @@ footer
 .logo-slid
   display: flex
   justify-content: center
-  margin-top: 50px
-  margin-bottom: 50px
+  margin-top: 20px
+  margin-bottom: 20px
 
   &__item
     +media-640
@@ -142,6 +143,7 @@ footer
     display: flex
     justify-content: center
     padding-top: 15px
+    margin-bottom: 20px
 
     &__item
       float: left
@@ -243,8 +245,8 @@ footer
 
 .slider .slick-dots li button:before
   content: ''
-  width: 20px
-  height: 20px
+  width: 16px
+  height: 16px
   border-radius: 50px
   background-color: #9ecb32
 
