--- a/resources/views/pages/index.njk
+++ b/resources/views/pages/index.njk
@@ -182,6 +182,9 @@
 				]
 			}
         ] %}
+	    <div class="full-history">
+
+	    </div>
         <div class="history-last">
             <h2 data-aos="fade-right" class="history-last__titile js-history-title-all" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="600">Последние Истории</h2>
             <h2 class="history-last__titile js-history-title" style="display: none">История</h2>
