--- a/resources/assets/stylesheets/sass/blocks/footer/footer.sass
+++ b/resources/assets/stylesheets/sass/blocks/footer/footer.sass
@@ -1,5 +1,5 @@
 footer
-  padding-bottom: 35px
+  //padding-bottom: 35px
   //min-height: 500px
 
 .emotions
@@ -31,7 +31,7 @@ footer
 
 .basil-second
   top: 55%
-  left: 16%
+  left: 12%
 
   +media-860
     left: 10%
