--- a/resources/assets/stylesheets/sass/blocks/full-history/full-history.sass
+++ b/resources/assets/stylesheets/sass/blocks/full-history/full-history.sass
@@ -1,6 +1,11 @@
 .full-history
   display: none
-  width: 795px
+  width: 700px
+  height: 500px
+  padding-top: 45px
+  //overflow-y: scroll
+
+
 
   +clearfix
 
@@ -9,3 +14,34 @@
 
   &_disable
     display: none
+
+
+
+.arrow__back
+  padding-right: 15px
+  
+.full__title
+  float: left
+  margin-top: 20px
+  padding-left: 10px
+  
+.full-feed
+  clear: both
+  float: none
+  padding-top: 15px
+  padding-left: 0px
+
+
+.js-history-back
+  float: right
+  margin-top: 15px
+
+.full-history .mCS-dark.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar
+  background-color: #9ecb32
+
+.full-history .mCS-dark.mCSB_scrollTools .mCSB_dragger:hover .mCSB_dragger_bar
+  background-color: #9ecb32
+
+.full-history .mCS-dark.mCSB_scrollTools .mCSB_dragger:active .mCSB_dragger_bar
+  background-color: #9ecb32
+
