--- a/resources/assets/stylesheets/sass/blocks/index.sass
+++ b/resources/assets/stylesheets/sass/blocks/index.sass
@@ -9,5 +9,6 @@
 @import "nav-header-mobile/nav-header-mobile"
 @import "add-history/add-history"
 @import "full-history/full-history"
+@import "footer-copy/footer-copy"
 
 
