--- a/resources/assets/stylesheets/sass/blocks/victory/victory.sass
+++ b/resources/assets/stylesheets/sass/blocks/victory/victory.sass
@@ -186,6 +186,18 @@
   height: 110px
   background-size: cover
 
+.info-count
+  display: flex
+  justify-content: space-around
+  width: 300px
+  margin: 0 auto
+
+  &__item
+    font-family: gothamPBo
+    font-size: 15px
+    color: #919191
+    padding-left: 5px
+
 .logo__count
   text-align: center
   line-height: 95px
