--- a/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
+++ b/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
@@ -172,10 +172,10 @@ a:hover, a:focus
     padding-top: 5px
 
   &__user
-    display: block
+    display: none
 
   &__authorization
-    display: none
+    display: block
 
 .history__social
   padding-right: 15px
@@ -227,18 +227,17 @@ a:hover, a:focus
   &_disable
     display: none
 
-.history__chois
-  &_disable
-    display: none
+.history__confirmations
+  padding-top: 35px
 
-//.history__disable
-  display: none
+.confirmations
+  border-bottom: 1.4px solid
+
+  &:hover
+    border-bottom: 0px
 
 .history__text_top
   padding-top: 25px
-  //padding-bottom: 25px
-
-
 
 .bacon
   position: absolute
