--- a/resources/assets/stylesheets/sass/core/_fonts.sass
+++ b/resources/assets/stylesheets/sass/core/_fonts.sass
@@ -28,3 +28,8 @@
   font-weight: normal
   font-style: normal
 
+@font-face
+  font-family: gothamPR
+  src: url("../../fonts/GothamProRegular.ttf")
+  font-weight: normal
+  font-style: normal
