--- a/resources/views/shared/_footer.njk
+++ b/resources/views/shared/_footer.njk
@@ -51,4 +51,25 @@
             </div>
         </div>
     </div>
+	<section class="footer-copy">
+		<div class="section-track"></div>
+		<div class="container-fluid">
+			<div class="container">
+				<div class="contact-info">
+					<a class="contact-info__item contact-info__item_success" href="#">Piudelcibo.ru</a>
+					<a class="contact-info__item contact-info__item_hover_disable" href="#">Адреса и контакты заведений</a>
+					<a class="contact-info__item contact-info__item_hover_disable" href="#">Обработка персональных данных</a>
+					<a class="contact-info__item contact-info__item_hover_disable" href="#">Разработка сайта: <span class="contact-info__item_success"> Rocket Science</span></a>
+				</div>
+				<div class="footer-social">
+					<a href=""><img src="/assets/images/footer-vk.png" alt="vkontakte"></a>
+					<a href=""><img src="/assets/images/footer-faceboock.png" alt="facebook"></a>
+					<a href=""><img src="/assets/images/footer-insta.png" alt="instagram"></a>
+				</div>
+				<div class="copyright">
+					<span>&copy; 2018 Кафе </span>
+				</div>
+			</div>
+		</div>
+	</section>
 </footer>
